<resources>
    <string name="app_name">LibMovie</string>

    <string name="logo_description">Logo</string>

    <string name="poster_prefix">https://image.tmdb.org/t/p/w500</string>

    <!-- Bottom navigation strings -->
    <string name="home_string">Home</string>
    <string name="library_string">Library</string>
    <string name="search_string">Search</string>
    <string name="stats_string">Stats</string>
    <string name="account_string">Account</string>

    <!-- Home strings -->
    <string name="in_theaters">In theaters</string>
    <string name="coming_soon">Coming soon</string>
    <string name="top_rated">Top rated</string>
    <string name="most_popular">Most popular</string>

    <!-- Library strings -->
    <string name="watched_string">Watched</string>
    <string name="not_watched_string">Not watched</string>

    <!-- Search fragment strings -->
    <string name="movies">Movies</string>
    <string name="actors">Actors</string>
    <string name="directors">Directors</string>

    <!-- Login form strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>

    <!-- Options strings -->
    <string name="genre">Select genre</string>
    <string name="order_by">Order by</string>
    <string name="layout_style">Layout style</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>