<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/icon_home"
        android:title="@string/home_string"
        />

    <item
        android:id="@+id/library"
        android:icon="@drawable/icon_library"
        android:title="@string/library_string"
        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/search_string"
        />

    <item
        android:id="@+id/stats"
        android:icon="@drawable/icon_stats"
        android:title="@string/stats_string"
        />

    <item
        android:id="@+id/account"
        android:icon="@drawable/icon_account"
        android:title="@string/account_string"
        />
</menu>