<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_logo"
            android:contentDescription="@string/logo_description"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000">
        </Button>
    </Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/in_theaters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_theaters"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/coming_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coming_soon"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_rated"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/most_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_popular"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_layout_home"/>

</RelativeLayout>