<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_act"
    android:background="@drawable/gradient_list">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_description"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="125dp"
        android:autofillHints="username"
        android:background="@drawable/shape_login"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/shape_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_below="@+id/password"
        android:text="Register"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>